tests/baselines/reference/parserOverloadOnConstants1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/parserOverloadOnConstants1.ts (4 errors) ====
    interface Document {
        createElement(tagName: string): HTMLElement;
                                        ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'HTMLElement'.
        createElement(tagName: 'canvas'): HTMLCanvasElement;
                                          ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'HTMLCanvasElement'.
        createElement(tagName: 'div'): HTMLDivElement;
                                       ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'HTMLDivElement'.
        createElement(tagName: 'span'): HTMLSpanElement;
                                        ~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'HTMLSpanElement'.
    }